--- a/landing/less/general-styles.less
+++ b/landing/less/general-styles.less
@@ -3,7 +3,10 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     font-family: Helvetica, sans-serif;
-    background: lightgray;
+    background-image: url('../img/landing_page_bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+   
 }
 
 *, *:before, *:after {
