--- a/landing/less/main-content.less
+++ b/landing/less/main-content.less
@@ -3,6 +3,10 @@
 .main-content-wrapper {
     width: 85%;
     margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+   align-items: center;
 }
 
 
@@ -15,6 +19,10 @@
     font-size: 1.7rem;
     border-radius: 20px;
     background: #fff;
+    box-shadow: 2px 2px 4px rgba(0,0,0, .1);
+    max-width: 320px;
+    width: 100%;
+    margin-right: 10px;
     
     &-find, &-login, &-join {
         padding: 15px 10px;
@@ -37,31 +45,40 @@
 /*********** Cards *****************/
 .card {
     border-radius: 10px;
-    // padding: 7px;
+    padding: 0px 20px;
     height: 140px;
     padding: 0px 15px;
+    max-width: 340px;
+    
+
+    &--img {
+        padding: 7px;
+    }
 
 }
 .card--technique{
     background-image: url('../img/BlueImage.png');
+    background-repeat: no-repeat;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 30px;
 }
 
 .card--training {
     background-image: url('../img/TurqImage.png');
+    background-repeat: no-repeat;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 20px;
 }
 
 .card--strength {
     background-image: url('../img/OrangeImage.png');
+    background-repeat: no-repeat;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 20px;
 }
@@ -69,7 +86,7 @@
 .card--title {
     color: #fff;
     font-weight: 300;
-    padding-left: 10px;
+    padding: 0px 10px;
 
     h2 {
         padding-bottom: 10px;
