--- a/app/src/components/login.css
+++ b/app/src/components/login.css
@@ -1,4 +1,5 @@
 .login-form {
+  font-family: "Rubik", sans-serif;
   display: flex;
   justify-content: center;
   margin: 0 auto;
@@ -8,6 +9,9 @@
   width: 350px;
   background: linear-gradient(90deg, #694cf2 0%, #889bfb 100%),
     linear-gradient(180deg, #a74cf2 0%, #7565fb 100%);
+}
+.login-form label {
+  font-weight: bold;
 }
 .img-container {
   display: flex;
@@ -27,4 +31,15 @@
 }
 .button-wrapper a {
   color: white;
+}
+.button-wrapper button {
+  background: white;
+}
+.select-option {
+  padding-left: 5px;
+  width: 300px;
+  height: 36px;
+  margin: 10px 0px;
+  border: 1px solid #d8d8d8;
+  box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
 }
