--- a/landing/less/general-styles.less
+++ b/landing/less/general-styles.less
@@ -3,10 +3,16 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     font-family: Helvetica, sans-serif;
+    position: relative;
+    min-height: 100%;
+   
+   
+}
+body {
     background-image: url('../img/landing_page_bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-   
+    
 }
 
 *, *:before, *:after {
