--- a/landing/less/footer.less
+++ b/landing/less/footer.less
@@ -1,8 +1,11 @@
 footer {
     background-image: linear-gradient(to top, #9a9a9a, #4e4e4e);
     border-radius: 30px 30px 0px 0px;
-    margin-top: 40px;
     height: 125px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 
     #footer--wrapper {
         width: 320px;
