--- a/landing/less/main-content.less
+++ b/landing/less/main-content.less
@@ -1,12 +1,14 @@
-
-
 .main-content-wrapper {
     width: 85%;
-    margin: 0 auto;
+    margin: 0 auto 170px;
 
     display: flex;
     flex-direction: column;
-   align-items: center;
+    align-items: center;
+
+    @media @desktop {
+        margin: 0 auto 100px;
+    }
 }
 
 
@@ -19,22 +21,29 @@
     font-size: 1.7rem;
     border-radius: 20px;
     background: #fff;
-    box-shadow: 2px 2px 4px rgba(0,0,0, .1);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, .1);
     max-width: 320px;
     width: 100%;
     margin-right: 10px;
-    
-    &-find, &-login, &-join {
+
+
+    @media @desktop {
+        display: none;
+    }
+
+    &-find,
+    &-login,
+    &-join {
         padding: 15px 10px;
         border-radius: 20px;
         text-decoration: none;
         color: black;
-    
+
         a {
             text-decoration: none;
         }
     }
-   
+
     &-active {
         color: orange;
         background-image: linear-gradient(to right, #1ce3da, #5983e8);
@@ -42,53 +51,189 @@
     }
 }
 
+
+.main--nav {
+    @media @desktop-main {
+        display: none;
+    }
+
+    flex: 2;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+
+
+    a {
+        text-decoration: none;
+        font-size: 1.8rem;
+    }
+}
+
 /*********** Cards *****************/
-.card {
-    border-radius: 10px;
-    padding: 0px 20px;
-    height: 140px;
-    padding: 0px 15px;
-    max-width: 340px;
-    
 
-    &--img {
-        padding: 7px;
+.cards {
+
+    @media @desktop {
+        display: flex;
+
+        margin-top: 50px;
     }
 
-}
-.card--technique{
-    background-image: url('../img/BlueImage.png');
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 30px;
-}
 
-.card--training {
-    background-image: url('../img/TurqImage.png');
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 20px;
-}
+    .card {
+        border-radius: 10px;
+        padding: 0px 20px;
+        height: 140px;
+        padding: 0px 15px;
+        max-width: 340px;
 
-.card--strength {
-    background-image: url('../img/OrangeImage.png');
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 20px;
-}
+        &--img {
+            padding: 7px;
+        }
 
-.card--title {
-    color: #fff;
-    font-weight: 300;
-    padding: 0px 10px;
-
-    h2 {
-        padding-bottom: 10px;
     }
+
+    .card--technique {
+        background-image: url('../img/BlueImage.png');
+        background-repeat: no-repeat;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 30px;
+
+        @media @desktop {
+            margin-top: 0;
+
+        }
+    }
+
+    .card--training {
+        background-image: url('../img/TurqImage.png');
+        background-repeat: no-repeat;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 20px;
+
+        @media @desktop {
+            margin-top: 0;
+        }
+    }
+
+    .card--strength {
+        background-image: url('../img/OrangeImage.png');
+        background-repeat: no-repeat;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 20px;
+
+        @media @desktop {
+            margin-top: 0;
+        }
+    }
+
+    .card--title {
+        color: #fff;
+        font-weight: 300;
+        padding: 0px 10px;
+
+        h2 {
+            padding-bottom: 10px;
+        }
+    }
+}
+
+
+.exercise--cards {
+    display: none;
+}
+
+@media @desktop {
+
+    .exercise--cards {
+        width: 1006px;
+        margin: 0 auto 200px;
+        display: block;
+    }
+
+    .exercise--card {
+        background: #fff;
+        display: flex;
+
+        &-content {
+            padding: 25px;
+            align-self: center;
+
+            h1 {
+                padding-bottom: 20px;
+            }
+            p {
+                line-height: 1.8rem;
+            }
+        }
+
+        p {
+            font-size: 1.6rem;
+        }
+
+    }
+
+    .exercise--image {
+        overflow: hidden;
+    }
+
+    blockquote {
+        position: absolute;
+        right: -90px;
+        top: 400px;
+        height: 80px;
+        line-height: 25px;
+        background: #f9f9f9;
+        opacity: .8;
+        border-left: 10px solid #5589e8;
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+        quotes: "\201C""\201D""\2018""\2019";
+        box-shadow: 0 2px 2px rgba(0,0,0, .3);
+    }
+    blockquote:before {
+        color: #5589e8;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.25em;
+        vertical-align: -0.4em;
+      }
+      blockquote:after {
+        content: close-quote;
+        visibility:hidden; /* to hide closing quote – don’t use display:none here,
+                              because that would mean close-quote is absent again */
+      }
+
+      .blockquote-2 {
+        position: absolute;
+        left: -90px;
+        top: 400px;
+        height: 80px;
+        line-height: 25px;
+        background: #f9f9f9;
+        opacity: .8;
+        border-left: 10px solid #f77f26;
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+        quotes: "\201C""\201D""\2018""\2019";
+        box-shadow: 0 2px 2px rgba(0,0,0, .3);
+    }
+    .blockquote-2:before {
+        color: #f77f26;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.25em;
+        vertical-align: -0.4em;
+      }
+
+
 }
