--- a/app/src/components/new-class.css
+++ b/app/src/components/new-class.css
@@ -50,3 +50,21 @@
   font-weight: bold;
   font-family: "Rubik", sans-serif;
 }
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search-container button {
+  height: 35px;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Rubik", sans-serif;
+}
+.search-bar {
+  width: 300px;
+  height: 36px;
+  margin: 10px 0px;
+  border: 1px solid #d8d8d8;
+  box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
+}
