--- a/landing/less/header.less
+++ b/landing/less/header.less
@@ -1,75 +1,90 @@
 
-
 .header {
-    width: 90%;
-     margin: 30px auto 0px;
+    height: 130px;
+    width: 100%;
+   
+    position: static; 
 
-     @media @desktop {
-        width: 1005px;
+    @media @desktop {
+        position: fixed;
+        background-image: linear-gradient(to right, #694cf2, #8c97fa);
+        height: 155px;
+        z-index: 5;
+        
     }
 }
+
 .header--wrapper {
+    width: 90%;
+    margin: 0 auto;
+
     display: flex;
+    align-items: flex-end;
     justify-content: space-between;
 
     @media @nav-mobile-to-desktop {
         margin: 0 auto;
         width: 720px;
     }
-    
-}
-.header--slogan {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
 
     @media @desktop {
-        flex: 1;
+        width: 1000px;
+        
     }
 }
 
-.header--title {
 
-    margin-left: 20%;
-
-    h1{
-        font-size: 5rem;
-        font-weight: 700;
-    }
-
-    h2 {
-        font-size: 3rem;
-        margin-top: -10px;
-        font-weight: 300;
-        margin-bottom: 10px;
-    }
-}
-
-.header--title-sub {
-    h3 {
-        font-size: 1.4rem;
-    }
-
-    span {
-        color: purple;
-    }
-}
-
-.header--links {
-    flex: 1;
+.header--slogan {
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    flex-direction: column;
 
-    .magnify {
-        margin-bottom: 8px;
-    }
+    .header--title {
+        margin-left: 18%;
+        h1 {
+            font-weight: 700;
+            margin-top: 30px;
+        }
+        h2{  
+            font-weight: 300;
+            margin-top: -7px;
+            margin-bottom: 15px;
+            font-size: 3rem;
+        }
 
-    .profile--icon {
-       margin-left: 8px;
+        &-sub {
+            span {
+                color: #7252f3;
+            }
+        }
 
-       @media @desktop {
-        padding-right: 15px;;
-    }
-    }
+        @media @desktop {
+            h1 {
+                font-size: 7rem;
+                margin-top: 20px;
+                color: #f2f2f2;
+                text-shadow: 1px 1px 2px rgba(0,0,0, .3);
+            }
+            h2 {
+                font-size: 4rem;
+                color: #f2f2f2;
+                text-shadow: 1px 1px 2px rgba(0,0,0, .3);
+                margin-bottom: 0px;
+            }
+            &-sub{
+                h3 {
+                    font-size: 2rem;
+                    color: #f2f2f2;
+                }
+                span {
+                    color: #f77e25;
+                }
+                
+            }
+        }
+    } 
+}
+
+.header--links .magnify {
+    padding-bottom: 7px;
+    padding-right: 5px;
 }
