--- a/landing/less/main-content.less
+++ b/landing/less/main-content.less
@@ -1,18 +1,20 @@
 .main-content-wrapper {
     width: 85%;
     margin: 0 auto 170px;
+    //padding-top: 150px; need to change this back at destop screen
 
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    // @media @desktop {
+    //     margin: 0 auto 100px;
+    // }
+
     @media @desktop {
-        margin: 0 auto 100px;
+        display: none;
     }
 }
-
-
-/*********** Nav Menu ***********/
 
 .nav--menu {
     margin-top: 30px;
@@ -27,9 +29,9 @@
     margin-right: 10px;
 
 
-    @media @desktop {
-        display: none;
-    }
+    // @media @desktop {
+    //     display: none;
+    // }
 
     &-find,
     &-login,
@@ -45,12 +47,11 @@
     }
 
     &-active {
-        color: orange;
+        color: #f77e25;
         background-image: linear-gradient(to right, #1ce3da, #5983e8);
         color: #fff;
     }
 }
-
 
 .main--nav {
     @media @desktop-main {
@@ -67,26 +68,36 @@
     a {
         text-decoration: none;
         font-size: 1.8rem;
+        color: #f2f2f2;
+
+        &:hover{
+            color: #f77e25;
+        }
     }
 }
+
+
 
 /*********** Cards *****************/
 
 .cards {
 
-    @media @desktop {
-        display: flex;
+    // @media @desktop {
+    //     display: flex;
 
-        margin-top: 50px;
-    }
+    //     margin-top: 50px;
+    // }
 
 
     .card {
         border-radius: 10px;
         padding: 0px 20px;
         height: 140px;
-        padding: 0px 15px;
         max-width: 340px;
+
+        // @media @desktop {
+        //     max-width: 335px;
+        // }
 
         &--img {
             padding: 7px;
@@ -116,9 +127,10 @@
         align-items: center;
         margin-top: 20px;
 
-        @media @desktop {
-            margin-top: 0;
-        }
+        // @media @desktop {
+        //     margin-top: 0;
+
+        // }
     }
 
     .card--strength {
@@ -129,9 +141,10 @@
         align-items: center;
         margin-top: 20px;
 
-        @media @desktop {
-            margin-top: 0;
-        }
+        // @media @desktop {
+        //     margin-top: 0;
+            
+        // }
     }
 
     .card--title {
@@ -145,6 +158,8 @@
     }
 }
 
+/********** EXERCISE CARDS ************/
+
 
 .exercise--cards {
     display: none;
@@ -153,9 +168,12 @@
 @media @desktop {
 
     .exercise--cards {
-        width: 1006px;
+        width: 1000px;
         margin: 0 auto 200px;
         display: block;
+        padding-top: 180px;
+
+        box-shadow: 0px 0px 3px rgba(#5983e8, .2);
     }
 
     .exercise--card {
@@ -167,7 +185,13 @@
             align-self: center;
 
             h1 {
-                padding-bottom: 20px;
+                padding-bottom: 8px;
+            }
+            h2 {
+                font-size: 2rem;
+                font-style: italic;
+                color: #808080;
+                padding-bottom: 10px;
             }
             p {
                 line-height: 1.8rem;
@@ -177,7 +201,9 @@
         p {
             font-size: 1.6rem;
         }
-
+        .skills-img{
+            margin-left: 70%;
+        }
     }
 
     .exercise--image {
@@ -237,3 +263,4 @@
 
 
 }
+
