--- a/landing/less/variables.less
+++ b/landing/less/variables.less
@@ -1,6 +1,7 @@
 
 // Escapted values
 
+@tablet: ~"(min-width: 800px)";
 @desktop: ~"(min-width: 1360px)";
 @desktop-main: ~"(max-width: 1360px)";
 @nav-mobile-to-desktop: ~"(min-width: 800px) and (max-width:1360px)";
