--- a/landing/less/header.less
+++ b/landing/less/header.less
@@ -43,12 +43,17 @@
         h1 {
             font-weight: 700;
             margin-top: 30px;
+            color: black;
         }
         h2{  
             font-weight: 300;
             margin-top: -7px;
             margin-bottom: 15px;
             font-size: 3rem;
+            color: black;
+        }
+        a {
+            text-decoration: none;
         }
 
         &-sub {
