--- a/landing/less/main-content.less
+++ b/landing/less/main-content.less
@@ -260,7 +260,75 @@
         margin-right: 0.25em;
         vertical-align: -0.4em;
       }
-
-
 }
 
+/************* ABOUT US ******************/
+
+.profile--cards-wrapper {
+    width: 90%;
+    margin: 50px auto 160px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media @tablet {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    @media @desktop {
+        margin: 0px auto;
+        width: 60%;
+        padding-top: 180px;
+    }
+    
+}
+.profile--card {
+    background: lightblue;
+    max-width: 340px;
+    border-radius: 5px;
+    box-shadow: 5px 2px 5px rgba(0,0,0, .4);
+    margin-bottom: 15px;
+    transition: all .3s ease-in;
+    cursor: pointer;
+
+    @media @tablet {
+        
+        margin: 10px 10px;
+    }
+
+    @media @desktop {
+        &:hover {
+            box-shadow: 8px 4px 18px rgba(0,0,0, .4);
+            transform: scale(1.02);
+        }
+
+        &card:nth-child(5){
+            padding-bottom: 10px;
+        }
+    }
+
+    &-name {
+        font-size: 2rem;
+        text-align: center;
+        padding: 10px 0;
+    }
+    h2 {
+        font-size: 3rem;
+        text-align: center;
+        padding: 10px 0 15px 0;
+    }
+    img {
+        width: 100%;
+    }
+    &-social {
+        display: flex;
+        justify-content: center;
+    }
+    &-social .fab {
+        color: white;
+        padding: 5px 5px 15px 5px;
+        
+    }
+}
