--- a/landing/css/index.css
+++ b/landing/css/index.css
@@ -351,7 +351,7 @@ p {
 @media (min-width: 1360px) {
   .exercise--cards {
     width: 1000px;
-    margin: 0 auto 200px;
+    margin: 0 auto 20px;
     display: block;
     padding-top: 180px;
     box-shadow: 0px 0px 3px rgba(89, 131, 232, 0.2);
@@ -448,6 +448,11 @@ p {
   transform: translateY(0px);
 }
 /************* ABOUT US ******************/
+@media (min-width: 1360px) {
+  .profile--cards {
+    padding: 0px 0px 150px 0;
+  }
+}
 .profile--cards-wrapper {
   width: 90%;
   margin: 50px auto 160px;
@@ -511,6 +516,66 @@ p {
 .profile--card-social .fab {
   color: white;
   padding: 5px 5px 15px 5px;
+}
+.tab-section {
+  display: none;
+}
+@media (min-width: 1360px) {
+  .tab-section {
+    display: block;
+    margin: 0 auto;
+    width: 1000px;
+  }
+  .tabs {
+    width: 100%;
+  }
+  .tabs .tabs-items {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+  }
+  .tabs .tabs-item {
+    display: none;
+    width: 75%;
+  }
+  .tabs .tabs-item .tabs-item-title {
+    font-size: 24px;
+    font-weight: bold;
+    padding-bottom: 10px;
+  }
+  .tabs .tabs-item-selected {
+    display: block;
+  }
+  .tabs .tabs-links {
+    display: flex;
+    background-color: #F77321;
+  }
+  .tabs .tabs-link {
+    padding: 20px;
+    font-size: 24px;
+    background: #6A4DF2;
+    border-right: 1px solid white;
+    color: #fff;
+    cursor: pointer;
+  }
+  .tabs .tabs-link:hover {
+    background: o #6A4DF2;
+  }
+  .tabs .tabs-link-selected {
+    z-index: 2;
+    border-right: 1px solid orange;
+    background-color: #fff;
+    color: black;
+  }
+  .tabs .tabs-link-selected:hover {
+    background-color: #fff;
+  }
+  .tabs-item-description p {
+    font-size: 1.7rem;
+    line-height: 2rem;
+  }
 }
 footer {
   background-image: linear-gradient(to top, #9a9a9a, #4e4e4e);
