--- a/app/src/components/checkout-card.css
+++ b/app/src/components/checkout-card.css
@@ -1,6 +1,7 @@
 .checkout-card-container {
   box-shadow: inset 0 1px 0px 0 rgba(0, 0, 0, 0.5),
     0 1px 0px 0 rgba(0, 0, 0, 0.5);
+  padding-bottom: 5px;
 }
 .checkout-title {
   display: flex;
