--- a/app/src/components/new-class.css
+++ b/app/src/components/new-class.css
@@ -68,3 +68,7 @@
   border: 1px solid #d8d8d8;
   box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
 }
+.loader {
+  width: 200px;
+  margin: 0 auto;
+}
